part1/1-10-even-more-services/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-writer-and-reader
  template:
    metadata:
      labels:
        app: logger-writer-and-reader
    spec:
      securityContext:
        runAsUser: 100
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: log-reader
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: jeknom/dowk-log-reader-app:0.1
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
        - name: log-writer
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: jeknom/dowk-log-writer-app:0.1
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
