part1/1-10-even-more-services/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowk-22-log-reader-app-svc
spec:
  type: ClusterIP
  selector:
    app: logger-writer-and-reader
  ports:
    - port: 2401
      protocol: TCP
      targetPort: 3000
