part1/1-10-even-more-services/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dowk-22-log-reader-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dowk-22-log-reader-app-svc
            port:
              number: 2401
